--- a/source/_patterns/20-molecules/navigation/navigation.scss
+++ b/source/_patterns/20-molecules/navigation/navigation.scss
@@ -67,7 +67,6 @@
 .navigation--subnav-wrapper {
   background-color: #222;
   margin: 8px -12px -8px -12px;
-  width: 100vw;
   padding: 0;
 
   @include tablet-up {
